tests/errmsgs/t6969.nim
discard """
  line: 6
  errormsg: "'enum' is not a concrete type."
"""

var e: enum